# template

./: .gitignore  MANIFEST.in  README.md  TODO.md  environment.yaml  pyproject.toml  requirements.txt
docs/: README.md
scripts/: template_script.py
src/: classtemplate.py  generic.py  template.py  utils.py
template/: container.py  generic.py  template_bin_script.py  utils.py
tests/: context.py  test_generic.py  test_template.py
